# PyDictXML

./: DictToXML.py  Perf_Test.py  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
src/PyDictXML/: __init__.py
test/: Perf_Test.py
tests/: test_Performance.py
